# smolvlm2-video-instruct

./: MAKE87.yml  README.md  pyproject.toml
app/: main.py
build_kit/: Dockerfile  Dockerfile.dev  custom-remote-settings.json  custom-settings-extension.js  entrypoint-dev.sh  training-tweaks-0.0.3.vsix
